<resources>
    <string name="app_name">สูงวัยรู้ทันโรค</string>
    <string name="loginStr">เข้าสู่ระบบเพื่อใช้งาน</string>
    <string name="f_nameStr">ชื่อ</string>
    <string name="l_nameStr">นามสกุล</string>
    <string name="ageStr">อายุ</string>
    <string name="genderStr">เพศ</string>
    <string name="weightStr">น้ำหนัก</string>
    <string name="heightStr">ส่วนสูง</string>
    <string name="fillInfoStr">กรอกข้อมูลที่จำเป็น</string>
    <string name="submitStr">ถัดไป</string>
    <string name="bmiStr">BMI : </string>
    <string name="emerStr">เบอร์ฉุกเฉิน</string>
    <!--@Tung Sayomphoo-->
    <string name="hypertension_string">โรคความดันโลหิตสูง</string>
    <string name="oste_string">โรคข้อเข่าเสื่อม</string>
    <string name="lipid_string">โรคไขมันในเลือดสูง</string>
    <string name="diabetes_string">โรคเบาหวาน</string>
    <string name="depression_string">ภาวะซึมเศร้า</string>
    <string name="next_string">ถัดไป</string>
    <string name="back_string">ย้อนกลับ</string>
    <string name="show_score">แสดงผลคะแนน</string>
    <string name="score">Score</string>
    <string name="reading">อ่านบทความ</string>
    <string name="editInfomation">แก้ไขข้อมูลส่วนตัว</string>
    <string name="backmain">กลับเมนูหลัก</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่ใช่</string>
    <string name="close">ตกลก</string>
    <string name="title">Title</string>
</resources>
