<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionShowScore">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:id="@+id/score_card"
            app:cardElevation="2dp"
            app:cardCornerRadius="20dp"
            android:layout_centerInParent="true"
            android:layout_width="330dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/score_layout"
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/header_score"
                    android:gravity="center"
                    android:textSize="23sp"
                    android:text="@string/show_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="20dp"
                    android:textSize="70sp"
                    android:gravity="center"
                    android:id="@+id/score"
                    android:text="@string/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_margin="20dp"
                    android:id="@+id/img_score"
                    android:layout_gravity="center"
                    android:src="@drawable/in_love"
                    android:layout_width="120dp"
                    android:layout_height="120dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/read_btn"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/reading"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_sick2"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_gravity="center"
            android:id="@+id/back_btn"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/backmain"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>