<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".QuestionActivity">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_title"
            app:cardBackgroundColor="@color/colorOrange"
            android:elevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/txt_head"
                android:textSize="18sp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/title"
                android:lineSpacingExtra="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="number"
                android:textSize="20sp"
                android:id="@+id/question_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/question_num_tv"
                android:text="question"
                android:id="@+id/question_text_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <RadioGroup
            android:id="@+id/rgb_question"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp">


            <RadioButton
                android:layout_margin="40dp"
                android:buttonTint="@color/green"
                android:textSize="20sp"
                android:id="@+id/yes_rb"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:layout_margin="40dp"
                android:buttonTint="@color/red"
                android:textSize="20sp"
                android:id="@+id/no_rb"
                android:scaleX="1.7"
                android:scaleY="1.7"
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/tmp_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/back_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:text="@string/back_string"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:background="@drawable/btn_sick1"/>
            <ImageButton
                android:id="@+id/sound_btn"
                android:src="@drawable/play"
                android:padding="5dp"
                android:background="@color/colorTransparent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_width="60dp"
                android:layout_height="60dp" />
            <Button
                android:id="@+id/next_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                android:text="@string/next_string"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:background="@drawable/btn_sick2"/>
        </LinearLayout>


        <Button
            android:text="กลับสู่หน้าหลัก"
            android:onClick="doBackHome"
            android:textSize="25sp"
            android:background="@drawable/selector_btn"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</RelativeLayout>